style.css
body {
    background-image: url(https://i.pinimg.com/originals/36/30/00/363000c1b5735897d229b4d3f2504126.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
}

.main-header {
    text-align: center;
    font-size: 32px;
}

.mini-header {
    text-align: center;
}

.img-center {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.main-text {
    text-align: center;
    font-family: 'Times New Roman', Times, serif;
    font-size: 32px;
}

.ol.li {
    text-align: center;
}

h2 {
    text-align: center;
}

ol {
    text-align: center;
}

ul {
    text-align: center;

}

